- Fix clicking on Fluppisoft directing to 404 - Make bold text more visible

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -60,6 +60,11 @@ body {
   color: $text-color;
 }
 
+strong {
+  color: $title-color;
+  font-weight: bold;
+}
+
 h1,
 h2,
 h3,
